# backend/index.js
@@ -7,6 +7,7 @@ const connectDB = require('./config/db');
 const productRouter = require('./routes/Product');
 const categoryRouter = require('./routes/Category');
 const brandRouter = require('./routes/Brand');
+const cartRouter = require('./routes/Cart');
 
 const PORT = 5000;
 
@@ -19,6 +20,7 @@ server.use(express.json());
 server.use('/product', productRouter);
 server.use('/category', categoryRouter);
 server.use('/brand', brandRouter);
+server.use('/cart', cartRouter)
 
 server.listen(PORT, () => {
     console.log(`Server Started at PORT: ${PORT}`.bgGreen);
