# backend/routes/Cart.js
@@ -1,0 +1,10 @@
+const express = require('express');
+const { addToCart, fetchCartByUser, deleteFromCart, updateCart } = require('../controller/Cart');
+const router = express.Router();
+
+router.post('/', addToCart)
+    .get('/', fetchCartByUser)
+    .delete('/:id', deleteFromCart)
+    .patch('/:id', updateCart);
+
+module.exports = router;
